[project]
name = "agno-deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.2",
    "asyncio>=4.0.0",
    "chromadb>=1.3.5",
    "fastapi>=0.121.3",
    "openai>=2.8.1",
    "pypdf>=6.4.0",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
